Add ingress target address spec

--- a/deploy/crds/cloudflare-operator.gary.cool_cloudflarerecords_crd.yaml
+++ b/deploy/crds/cloudflare-operator.gary.cool_cloudflarerecords_crd.yaml
@@ -33,6 +33,8 @@ spec:
             properties:
               content:
                 type: string
+              ingress:
+                type: string
               name:
                 type: string
               priority:
